--- a/src/styles/topics.css
+++ b/src/styles/topics.css
@@ -36,3 +36,26 @@
     font-weight: 700;
     line-height: 2.1rem;
 }
+
+/* Tablet */
+@media screen and (width >= 1024px) {
+    .topics__title,
+    .topics__item .topics__link {
+        font-size: 1.9rem;
+    }
+}
+
+/* Desktop */
+@media screen and (width >= 1440px) {
+    .topics_container {
+        padding: 4.8rem 20vw;
+    }
+
+    .topics__title {
+        font-size: 3rem;
+    }
+
+    .topics__item .topics__link {
+        font-size: 2.2rem;
+    }
+}
